--- a/css8/css8-1.html
+++ b/css8/css8-1.html
@@ -117,7 +117,7 @@
 
             </div>
         </div>
-        <h5>如何学习</h5>
+        <strong>如何学习</strong>
         <div class="container">
             <div class="row">
                 <div class="col-md-3 box">
@@ -182,46 +182,106 @@
                 </div>
             </dib>
         </div>
-        <h5>优秀学员展示</h5>
+        <strong>优秀学员展示</strong>
         <div class="container">
             <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-6 col-md-3 col-12">
                     <div class="student-box">
                         <a href="#">
                             <img class="portrait" src="picture/task12-css8.png">
                         </a>
                         <h4>技术顾问：罗大佑</h4>
+                        <p class="show">百度技术总监：互联网基础 服务领域，从事虚拟主机、 云服务器、域名。曾任新网 高级技术经理，负责技术研 发、团队管理与建设。</p>                           
+                    </div>          
+                </div>
+                <div class="col-sm-6 col-md-3 col-12">
+                    <div class="student-box">
+                        <a href="#">
+                            <img class="portrait" src="picture/task13-css8.png">
+                        </a>
+                        <h4>技术顾问：罗大佑</h4>
+                        <p class="show">百度技术总监：互联网基础 服务领域，从事虚拟主机、 云服务器、域名。曾任新网 高级技术经理，负责技术研 发、团队管理与建设。</p>           
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 col-12">
+                    <div class="student-box">
+                        <a href="#">
+                            <img class="portrait" src="picture/task14-css8.png">
+                        </a>
+                        <h4>技术顾问：罗大佑</h4>
+                        <p class="show">百度技术总监：互联网基础 服务领域，从事虚拟主机、 云服务器、域名。曾任新网 高级技术经理，负责技术研 发、团队管理与建设。</p>                                
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 col-12">
+                    <div class="student-box">
+                        <a href="#">
+                            <img class="portrait" src="picture/task15-css8.png">
+                        </a>
+                        <h4>技术顾问：罗大佑</h4>
                         <p class="show">百度技术总监：互联网基础 服务领域，从事虚拟主机、 云服务器、域名。曾任新网 高级技术经理，负责技术研 发、团队管理与建设。</p>
                     </div>
                 </div>
-                <div class="col-sm-3">
-                        <div class="student-box">
-                            <a href="#">
-                                <img class="portrait" src="picture/task12-css8.png">
-                            </a>
-                            <h4>技术顾问：罗大佑</h4>
-                            <p class="show">百度技术总监：互联网基础 服务领域，从事虚拟主机、 云服务器、域名。曾任新网 高级技术经理，负责技术研 发、团队管理与建设。</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-3">
-                            <div class="student-box">
-                                <a href="#">
-                                    <img class="portrait" src="picture/task12-css8.png">
-                                </a>
-                                <h4>技术顾问：罗大佑</h4>
-                                <p class="show">百度技术总监：互联网基础 服务领域，从事虚拟主机、 云服务器、域名。曾任新网 高级技术经理，负责技术研 发、团队管理与建设。</p>
-                            </div>
-                        </div>
-                        <div class="col-sm-3">
-                                <div class="student-box">
-                                    <a href="#">
-                                        <img class="portrait" src="picture/task12-css8.png">
-                                    </a>
-                                    <h4>技术顾问：罗大佑</h4>
-                                    <p class="show">百度技术总监：互联网基础 服务领域，从事虚拟主机、 云服务器、域名。曾任新网 高级技术经理，负责技术研 发、团队管理与建设。</p>
-                                </div>
-                            </div>
             </div>
+            <div class="row indicate-box">
+                <div class="col-12">
+                    <ul>
+                        <li class="indicate-green"></li>
+                        <li class="indicate"></li>
+                        <li class="indicate"></li>
+                        <li class="indicate"></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <strong>战略合作企业</strong>
+        <div class="container">
+            <div class="row collaborate">
+                <div class="col-md-20% ">
+                    <a>
+                        <img class="alibaba" src="picture/task2-css8.png">
+                    </a>
+                </div>
+                <div class="col-md-20%">
+                    <a>
+                        <img class="jishanyun" src="picture/task3-css8.png">
+                    </a>    
+                </div>
+                <div class="col-md-20%">
+                    <a>
+                        <img class="huanxin" src="picture/task4-css8.png">
+                    </a>                 
+                </div>
+                <div class="col-md-20%">
+                    <a>
+                        <img class="ronglian" src="picture/task5-css8.png">
+                    </a>
+                </div>
+                <div class="col-md-20%">
+                    <a>
+                        <img class="qiniu" src="picture/task6-css8.png">
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="container bottom">
+            <div class="row">
+                <div class="col-12">
+                    <strong class="font">友情链接</strong>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-10%"></div>
+                <div class="col-md-10%"></div>
+                <div class="col-md-10%"></div>
+                <div class="col-md-10%"></div>
+                <div class="col-md-10%"></div>
+                <div class="col-md-10%"></div>
+                <div class="col-md-10%"></div>
+                <div class="col-md-10%"></div>
+                <div class="col-md-10%"></div>
+                <div class="col-md-10%"></div>
+            </div>
+
         </div>
     </mian>
 
