--- a/css8/css8-1.html
+++ b/css8/css8-1.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width; initial-scale=1.0;minimum-scale=1.0; 
+    maximum-scale=1.0; user-scalable=no;">
     <title>首页</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="css/css-1.css">
@@ -111,7 +111,7 @@
                     <span class="long"></span>                    
                     <h6 class="digit">12400</h6>
                     <p class="synopsis">累计在线学习人数</p>
-                    <h6 class="bottom-digit">12400</h6>
+                    <h6 class="digit bottom-digit">12400</h6>
                     <p class="synopsis">学员已经找到满意工作</p>
                 </div>
 
@@ -234,29 +234,29 @@
             </div>
         </div>
         <strong>战略合作企业</strong>
-        <div class="container">
+        <div class="container picture">
             <div class="row collaborate">
-                <div class="col-md-20% ">
+                <div class="col-md-20% picture-box">
                     <a>
                         <img class="alibaba" src="picture/task2-css8.png">
                     </a>
                 </div>
-                <div class="col-md-20%">
+                <div class="col-md-20% picture-box">
                     <a>
                         <img class="jishanyun" src="picture/task3-css8.png">
                     </a>    
                 </div>
-                <div class="col-md-20%">
+                <div class="col-md-20% picture-box">
                     <a>
                         <img class="huanxin" src="picture/task4-css8.png">
                     </a>                 
                 </div>
-                <div class="col-md-20%">
+                <div class="col-md-20% picture-box">
                     <a>
                         <img class="ronglian" src="picture/task5-css8.png">
                     </a>
                 </div>
-                <div class="col-md-20%">
+                <div class="col-md-20% picture-box">
                     <a>
                         <img class="qiniu" src="picture/task6-css8.png">
                     </a>
@@ -269,21 +269,122 @@
                     <strong class="font">友情链接</strong>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-10%"></div>
-                <div class="col-md-10%"></div>
-                <div class="col-md-10%"></div>
-                <div class="col-md-10%"></div>
-                <div class="col-md-10%"></div>
-                <div class="col-md-10%"></div>
-                <div class="col-md-10%"></div>
-                <div class="col-md-10%"></div>
-                <div class="col-md-10%"></div>
-                <div class="col-md-10%"></div>
-            </div>
-
+            <ul class="row bottom-box color">
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">手机软件</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">教师招聘</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">找工作</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">教师招聘</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">找工作</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">手机软件</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">教师招聘</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">手机软件</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">手机软件</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">找工作</a>
+                </li>
+            </ul>
+            <ul class="row bottom-box color">
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">手机软件</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">教师招聘</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">找工作</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">教师招聘</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">找工作</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">手机软件</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">教师招聘</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">手机软件</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">手机软件</a>
+                </li>
+                <li class="col-md-10% zoom">
+                    <a class="bottom-font">找工作</a>
+                </li>
+            </ul>
         </div>
     </mian>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-4 footer-font">
+                    <a class="footer-font">技能树 — 改变你我</a>
+                </div>
+                <div class="col-sm-4 footer-font">
+                    <a>旗下网站</a>
+                </div>
+                <div class="col-sm-3">
+                    <div class="erweima-center ">
+                        <span class="footer-font">微信公众平台</span>
+                        <a class="erweima">
+                            <img class="erweima" src="picture/task7-css8.png">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row center-box">
+                <div class="col-sm-5 offset-4 footer-font">
+                    <a>草船云孵化器</a>
+                    <a class="it">最强IT特训营</a>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row center-box">
+                <div class="col-sm-4 footer-font">
+                    <a>关于我们 | 联系我们 | 合作</a>
+                </div>
+                <div class="col-sm-5 footer-font">
+                    <a>葡萄藤轻游戏</a>
+                    <a class="it">桌游精灵</a>
+                </div>
+            </div>
+        </div>
+        <div class="copyright-box">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12">
+                        <p class="copyright">Copyright © 2015技能树 www.jnshu.com  All Rights Reserved | 京ICP</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        
+        
+    </footer>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
