--- a/css8/css8-1.html
+++ b/css8/css8-1.html
@@ -6,8 +6,9 @@
     maximum-scale=1.0; user-scalable=no;">
     <title>首页</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="css/header.css">
     <link rel="stylesheet" type="text/css" href="css/css-1.css">
-
+    <link rel="stylesheet" type="text/css" href="css/footer.css">
 
 
 </head>
