--- a/css8/css8-2.html
+++ b/css8/css8-2.html
@@ -58,11 +58,72 @@
             </div>
         </div>
     </header>
-
-
-
-
-
+    <main>
+        <img class="picture" src="picture/task8-css8.png">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-2">
+                    <a class="black-font">首页></a>
+                    <a class="green-font">合作企业</a>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3 left-nav">
+                    <ul>
+                        <li class="headline">
+                            <div class="a">
+                                <h1 class="font">合作企业</h1>
+                            </div>
+                        </li>
+                        <li class="dian">
+                            <a class="font">阿里巴巴</a>
+                        </li>
+                        <li class="dian">
+                            <a class="font">腾讯视频</a>
+                        </li>
+                        <li class="dian">
+                            <a class="font">土豆网</a>
+                        </li>
+                        <li class="dian">
+                            <a class="font">北京葡萄藤</a>
+                        </li>
+                        <li class="dian">
+                            <a class="font">阿里巴巴</a>
+                        </li>
+                        <li class="dian">
+                            <a class="font">合作企业</a>
+                        </li>
+                        <li class="dian">
+                            <a class="font">腾讯视频</a>
+                        </li>
+                        <li class="dian">
+                            <a class="font">土豆网</a>
+                        </li>
+                        <li class="dian">
+                            <a class="font">北京葡萄藤</a>
+                        </li>
+                        <li class="dian">
+                            <a class="font">合作企业</a>
+                        </li>
+                        <li class="dian">
+                            <a class="font">腾讯视频</a>
+                        </li>
+                        <li class="dian">
+                            <a class="font">阿里巴巴</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-sm-8 txet-box">
+                    <div>
+                        <img class="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    
+    </main>
     <footer>
         <div class="container">
             <div class="row">
