--- a/css8/css8-3.html
+++ b/css8/css8-3.html
@@ -60,9 +60,22 @@
     <main>
         <div class="container">
             <div class="row">
-                <div class="col-sm-12">
+                <div class="col-sm-12 home-box">
                     <a class="black-font">首页></a>
                     <a class="green-font">合作企业</a>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 direction-box">
+                    <a class="direction">方向：</a>
+                    <a class="option">全部</a>
+                    <a class="option">前端开发</a>
+                    <a class="option">后端开发</a>
+                    <a class="option">移动开发</a>
+                    <a class="option">整站开发</a>
+                    <a class="option">运营维护</a>
                 </div>
             </div>
         </div>
