--- a/css8/css8-2.html
+++ b/css8/css8-2.html
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <nav class="navbar navbar-expand-md bg-green navbar-dark">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="css8-1.html">
                             <img class="xiuzhenyuan" src="picture/xiuzhenyuan.png">
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -40,16 +40,16 @@
                         <div class="collapse navbar-collapse" id="collapsibleNavbar">
                             <ul class="navbar-nav">
                                 <li class="nav-item">                      
-                                    <a class="nav-link" href="#">首页</a>
+                                    <a class="nav-link" href="css8-1.html">首页</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">职业</a>
+                                    <a class="nav-link" href="css8-3.html">职业</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">推荐</a>
                                 </li>    
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">关于</a>
+                                    <a class="nav-link" href="css8-2.html">关于</a>
                                 </li>
                             </ul>
                         </div>  
@@ -63,7 +63,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
-                    <a class="black-font">首页></a>
+                    <a href="css8-1.html" class="black-font">首页></a>
                     <a class="green-font">合作企业</a>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                             <a class="font">腾讯视频</a>
                         </li>
                         <li class="dian">
-                            <a class="font">土豆网</a>
+                            <a href="#a" class="font">土豆网</a>
                         </li>
                         <li class="dian">
                             <a class="font">北京葡萄藤</a>
@@ -115,7 +115,9 @@
                 </div>
                 <div class="col-sm-8 txet-box">
                     <div class="top-box">
-                        <img class="tudouwang" src="picture/task9-css8.png">
+                        <a name="a">
+                            <img class="tudouwang" src="picture/task9-css8.png">
+                        </a>
                         <p class="txet-top">土豆网公司成立于1998年11月， 是目前中国最大的互联网综合服务提供商之一，也是中国
                             服务用户最多的互联网企业之一。成立10多年以来，腾讯一直秉承一切以用户价值为依归的
                             经营理念，始终处于稳健、高速发展的状态。2004年6月16日，腾讯公司在香港联交所主板
