--- a/css8/css8-1.html
+++ b/css8/css8-1.html
@@ -32,7 +32,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <nav class="navbar navbar-expand-md bg-green navbar-dark">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="css8-1.html">
                             <img class="xiuzhenyuan" src="picture/xiuzhenyuan.png">
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -41,16 +41,16 @@
                         <div class="collapse navbar-collapse" id="collapsibleNavbar">
                             <ul class="navbar-nav">
                                 <li class="nav-item">                      
-                                    <a class="nav-link" href="#">首页</a>
+                                    <a class="nav-link" href="css8-1.html">首页</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">职业</a>
+                                    <a class="nav-link" href="css8-3.html">职业</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">推荐</a>
                                 </li>    
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">关于</a>
+                                    <a class="nav-link" href="css8-2.html">关于</a>
                                 </li>
                             </ul>
                         </div>  
@@ -72,7 +72,7 @@
             <!-- 轮播图片 -->
             <div class="carousel-inner ">
               <div class="carousel-item active">
-                <img class="picture-size" src="../css8/picture/task1-css8.png">
+                <img  class="picture-size" src="../css8/picture/task1-css8.png">
               </div>
               <div class="carousel-item">
                 <img class="picture-size"  src="../css8/picture/task10-css8.png">
