--- a/css8/css8-3.html
+++ b/css8/css8-3.html
@@ -30,7 +30,7 @@
             <div class="row">
                 <div class="col-sm-12">
                     <nav class="navbar navbar-expand-md bg-green navbar-dark">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand" href="css8-1.html">
                             <img class="xiuzhenyuan" src="picture/xiuzhenyuan.png">
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -39,16 +39,16 @@
                         <div class="collapse navbar-collapse" id="collapsibleNavbar">
                             <ul class="navbar-nav">
                                 <li class="nav-item">                      
-                                    <a class="nav-link" href="#">首页</a>
+                                    <a class="nav-link" href="css8-1.html">首页</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">职业</a>
+                                    <a class="nav-link" href="css8-3.html">职业</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#">推荐</a>
                                 </li>    
                                 <li class="nav-item">
-                                    <a class="nav-link" href="#">关于</a>
+                                    <a class="nav-link" href="css8-2.html">关于</a>
                                 </li>
                             </ul>
                         </div>  
