--- a/css8/css8-3.html
+++ b/css8/css8-3.html
@@ -27,7 +27,7 @@
     <!-- 导航栏 -->
         <div class="bg-green">
         <div class="container">
-            <div class="row">
+            <div class="row right-zoom">
                 <div class="col-sm-12">
                     <nav class="navbar navbar-expand-md bg-green navbar-dark">
                         <a class="navbar-brand" href="css8-1.html">
