--- a/css8/css8-1.html
+++ b/css8/css8-1.html
@@ -29,7 +29,7 @@
         <!-- 导航栏 -->
         <div class="bg-green">
         <div class="container">
-            <div class="row">
+            <div class="row right-zoom">
                 <div class="col-sm-12">
                     <nav class="navbar navbar-expand-md bg-green navbar-dark">
                         <a class="navbar-brand" href="css8-1.html">
@@ -106,7 +106,7 @@
                 <div class="col-sm-3 top-content content">
                     <span class="person"></span>
                     <h6>人脉</h6>
-                    <p class="synopsis left">同班好友，同院学长，技术大师， 入学就混入职脉圈，为以后铺平 道路。</p>
+                    <p class="synopsis left synopsis-left">同班好友，同院学长，技术大师， 入学就混入职脉圈，为以后铺平 道路。</p>
                 </div>
                 <div class="col-sm-3 top-content content">
                     <span class="long"></span>                    
@@ -121,28 +121,28 @@
         <strong>如何学习</strong>
         <div class="container">
             <div class="row">
-                <div class="col-md-3 box">
+                <div class="col-md-3 col-sm-6 box">
                     <div class="circle">
                         <span class="circle-content">1</span>
                     </div>
                     <p class="font">匹配你现在的个人情况 寻找适合自己的岗位</p>
                     <span class="arrows"></span>
                 </div>
-                <div class="col-md-3 box">
+                <div class="col-md-3 col-sm-6 box">
                     <div class="circle">
                         <span class="circle-content">2</span>
                     </div>
                     <p class="font">了解职业前景薪金待遇、 竞争压力等</p>
                     <span class="arrows"></span>
                 </div>
-                <div class="col-md-3 box">
+                <div class="col-md-3 col-sm-6 box">
                     <div class="circle">
                         <span class="circle-content">3</span>
                     </div>
                     <p class="font font-right">掌握行业内顶级技能</p>
                     <span class="arrows"></span>
                 </div>
-                <div class="col-md-3 box">              
+                <div class="col-md-3 col-sm-6 box">              
                     <div class="circle">
                         <span class="circle-content">4</span>
                     </div>
@@ -153,28 +153,28 @@
         </div>
         <div class="container distance">
             <dib class="row">
-                <div class="col-md-3 box">
+                <div class="col-md-3 col-sm-6 box">
                     <div class="circle">
                         <span class="circle-content">5</span>
                     </div>
                     <p class="font">参考学习资源，掌握 技能点，逐个完成任务</p>
                     <span class="arrows"></span>
                 </div>
-                <div class="col-md-3 box">
+                <div class="col-md-3 col-sm-6 box">
                     <div class="circle">
                         <span class="circle-content">6</span>
                     </div>
                     <p class="font">加入班级，和小伙伴们 互帮互助，一块学习</p>
                     <span class="arrows"></span>
                 </div>
-                <div class="col-md-3 box">
+                <div class="col-md-3 col-sm-6 box">
                     <div class="circle">
                         <span class="circle-content">7</span>
                     </div>
                     <p class="font">选择导师，一路引导， 加速自己成长</p>
                     <span class="arrows"></span>
                 </div>
-                <div class="col-md-3 box">
+                <div class="col-md-3 col-sm-6 box">
                     <div class="circle">
                         <span class="circle-content">8</span>
                     </div>
