--- a/css10/css10.html
+++ b/css10/css10.html
@@ -55,8 +55,8 @@
         </div>
         <!-- 进度条 -->
         <div class="container top">
-            <div class="row">
-                <div class="col-sm-12">
+            <div class="row schedule">
+                <div class="col-md-12 col-8">
                     <div class="box">
                     <a class="box">
                         <span class="box">1</span>
@@ -85,6 +85,15 @@
             </div>
         </div>
     </header>
+    <main>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <strong class="strong-font">请您按照以下步骤来定制您的纸箱</strong>
+                </div>
+            </div>
+        </div>
+    </main>
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
