--- a/css8/css8-1.html
+++ b/css8/css8-1.html
@@ -244,7 +244,7 @@
                 </div>
                 <div class="col-md-20% picture-box">
                     <a>
-                        <img class="jishanyun" src="picture/task3-css8.png">
+                        <img class="jishanyun" src="picture/jinshanyun.png">
                     </a>    
                 </div>
                 <div class="col-md-20% picture-box">
