--- a/css8/css8-3.html
+++ b/css8/css8-3.html
@@ -75,22 +75,22 @@
                     <div class="container">
                         <div class="row">
                             <div class="col-sm-2 option-box">
-                                <a href="#b" class="option">全部</a>
+                                <a href="#web" class="option">全部</a>
                             </div>
                             <div class="col-sm-2 option-box">
-                                <a href="#b" class="option">前端开发</a>
+                                <a href="#web" class="option">前端开发</a>
                             </div>
                             <div class="col-sm-2 option-box">
-                                <a href="#c"  class="option">后端开发</a>
+                                <a href="#java"  class="option">后端开发</a>
                             </div>
                             <div class="col-sm-2 option-box">
-                                <a href="#d" class="option">移动开发</a>
+                                <a href="#move" class="option">移动开发</a>
                             </div>
                             <div class="col-sm-2 option-box">
-                                <a href="#e" class="option">整站开发</a>
+                                <a href="#site" class="option">整站开发</a>
                             </div>
                             <div class="col-sm-2 option-box">
-                                <a href="#f" class="option">运营维护</a>
+                                <a href="#op" class="option">运营维护</a>
                             </div>
                         </div>
                     </div>
@@ -100,7 +100,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 headline-box">
-                    <a name="b">前端开发方向</a>
+                    <a name="web">前端开发方向</a>
                 </div>
             </div>
         </div>
@@ -351,7 +351,7 @@
         <div class="container">
                 <div class="row">
                     <div class="col-sm-12 headline-box">
-                        <a name="c">后端开发方向</a>
+                        <a name="java">后端开发方向</a>
                     </div>
                 </div>
         </div>
@@ -762,7 +762,7 @@
         <div class="container">
                 <div class="row">
                     <div class="col-sm-12 headline-box">
-                        <a name="f">运维方向</a>
+                        <a name="op">运维方向</a>
                     </div>
                 </div>
         </div>
@@ -1013,7 +1013,7 @@
         <div class="container">
                 <div class="row">
                     <div class="col-sm-12 headline-box">
-                        <a name="d">移动开发方向</a>
+                        <a name="move">移动开发方向</a>
                     </div>
                 </div>
         </div>
