--- a/css8/css8-2.html
+++ b/css8/css8-2.html
@@ -82,7 +82,7 @@
                             <a class="font">腾讯视频</a>
                         </li>
                         <li class="dian">
-                            <a href="#a" class="font">土豆网</a>
+                            <a href="#tudouwang" class="font">土豆网</a>
                         </li>
                         <li class="dian">
                             <a class="font">北京葡萄藤</a>
@@ -115,7 +115,7 @@
                 </div>
                 <div class="col-sm-8 txet-box">
                     <div class="top-box">
-                        <a name="a">
+                        <a name="tudouwang">
                             <img class="tudouwang" src="picture/task9-css8.png">
                         </a>
                         <p class="txet-top">土豆网公司成立于1998年11月， 是目前中国最大的互联网综合服务提供商之一，也是中国
